2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* README: reorganize a bit, use <MY-LANGUAGE> for nl.

2005-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_gettext*): New functions.

	* site/install/*ihtml: Fix localisations.

2005-05-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile (upload): encapsulate CVS upload by CVS_COMMIT variable.

2005-05-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: version no. for MacOS installer.

	* site/news.ihtml: separate installer announcement

2005-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/graphics/annotate-example-score.svg:
	* site/graphics/annotate-example-single-part.svg: Localise
	hornNotes, bassoonNotes too.  Use variable iso identifier.

	* site/install/devel.ihtml: 
	* site/install/old.ihtml: 
	* site/install/stable.ihtml: Factor out.  Gettextize.

	* scripts/format-page.py (grab_ihtml): Bugfix: also read from
	original site dir.
	(grab_gettext): Remove @@, match plain _("").

	* GNUmakefile (po/newweb.pot): Run xgettext on .IHTMLs too.

	* site/install/index.html: Include.

	* GNUmakefile (apache-1.3.x-fixup): New target.
	(all): Use it.

2005-05-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html (href): opps, fink is at 2.5.23
	(href): add link to GS compat libraries.

	* site/images/cygwin.png (Module): add cygwin logo.

	* site/install/index.html (href): add Mac binary. 

	* site/images/fink.png (Module): separate logo for Fink

2005-05-25  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/index.html (href): fixed case in "go here". Added
	mingw installer for windows.

2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/slackware.html (Module): remove.

2005-05-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site: Add missing translation headers.

2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/thanks.html (href): add Matthias Neeracher.

	* scripts/format-page.py (browser_language): clarify 